# px4_application

./: CMakeLists.txt  README.md  package.xml
config/: pid_controller.yaml  uav_collaboration.yaml
config/controller_config/: pid_controller.yaml
config/detection_config/: door_detection.yaml
config/estimator_config/: uav_estimator.yaml
config/gcs_config/: gcs_display.yaml
config/mavros_config/: px4_config_1.yaml  px4_config_2.yaml  px4_config_3.yaml  px4_config_4.yaml  px4_pluginlists.yaml
config/mission_config/: app_collaboration.yaml  app_mission_template.yaml  app_visual_formation.yaml
config/rate_config/: spin_rate_config.yaml
config/rviz_config/: crossing.rviz  crossing_test.rviz  door_visualization.rviz  formation.rviz  muti_comm_formation.rviz  rviz_visualization.rviz  trajectory_config.rviz  trajectory_tracking.rviz  visual_formation.rviz  visual_formation_sim.rviz
doc/0.实物演示/: 实物演示.md
doc/2.飞控/: 配置校准.md  飞控调试.md
doc/3.数传与远程连接/: 数传与远程终端调试.md
doc/4.ROS程序/: 程序说明.md
doc/ROS程序/: 程序说明.md
doc/环境安装/: ROS+PX4开发环境安装.md
doc/飞控/: 飞控调试.md
firmware/1.11.3/: px4_fmu-v5_default.px4
include/: aruco_landing.h  filters_lp.h  gcs_display.h  gcs_setting.h  math_utils.h  pid_controller.h  ros_base.h  status_subscriber.h  uav_collaboration.h  uav_control.h  uav_mission_template.h  uav_status_subscriber.h
include/application/: app_collaboration.h  app_mission_template.h  app_visual_formation.h
include/detection/: door_detection.h  drone_realsense_yolo.h  drone_sub_yolo_info.h  realsense2_processing.h  realsense2_test.h
include/gcs/: gcs_display.h  gcs_setting.h
include/pub/: form_publisher.h  traj_publisher.h
include/subscriber/: status_subscriber.h
include/uav/: uav_control.h  uav_estimator.h
include/utilities/: filters_lp.h  func_utils.h  pid_controller.h
launch/: app_collaboration.launch  app_mission_template.launch  app_uav_collaboration.launch  app_uav_mission_template.launch  app_visual_formation.launch  base_form_publisher.launch  base_gcs_control.launch  base_gcs_display.launch  base_gcs_setting.launch  base_sim_double_uav_ground_truth.launch  base_sim_multi_uav.launch  base_sim_multi_uav_ground_truth.launch  base_sim_single_vehicle.launch  base_sim_single_vehicle_ground_truth.launch  base_traj_publisher.launch  base_uav_control.launch  base_uav_estimator.launch  base_uav_formation_sim.launch  base_uav_mavros_connection.launch  det_door.launch  det_realsense_yolo.launch  det_tensorrt_yolo_realsense.launch  det_yolo_drone.launch  gcs.launch  rviz_visualization.launch  uav.launch
msg/: BoundaryCondition.msg  BoundaryConditions.msg  BoundingBox.msg  FlatTarget.msg  LeaderStatus.msg  RealsenseTarget.msg  RealsenseTargets.msg  TargetStatus.msg  UavCommand.msg  UavState.msg  UavStatus.msg
script/reality/: collaborative_real.sh
script/simulation/: collaborative_sim.sh  formation_mission_template_sim.sh  formation_sim.sh  single_sim.sh
scripts/pynodes/: rospy_yolo_detector_realsense.py  rospy_yolo_detector_realsense_flip.py  rospy_yolo_detector_sub_topic.py  rospy_yolo_detector_thread_realsense.py  rospy_yolo_detector_videocap.py  tensorrt_yolo_realsense.py  tensorrt_yolo_realsense_flip.py  tensorrt_yolo_thread_realsense.py  tensorrt_yolo_thread_realsense_flip.py  yolo_detect_with_socket.py
scripts/reality/: collaborative_real.sh  real_crossing.sh  real_folower_common_formation.sh  real_folower_visual_formation.sh  real_leader_common_formation.sh  real_traj_tracking.sh  recorder_door_image.sh  recorder_drone_image.sh  rosbag_folower.sh  rosbag_leader.sh
scripts/simulation/: sim_collaborative.sh  sim_comm_formation.sh  sim_crossing.sh  sim_formation_mission_template.sh  sim_multi_comm_formation.sh  sim_multi_visual_formation.sh  sim_traj_tracking.sh  sim_visual_formation.sh
simulation/: README.md
simulation/models/: 6011_typhoon_h480  README.MD
simulation/models/all_doors/: README.md
simulation/models/all_doors/det_door/: det_door.urdf
simulation/models/all_doors/door1/: door1.urdf  model.config  model.sdf
simulation/models/all_doors/door2/: door2.urdf  model.config  model.sdf
simulation/models/all_doors/door3/: door3.urdf  model.config  model.sdf
simulation/models/all_doors/door4/: door4.urdf  model.config  model.sdf
simulation/models/all_doors/door5/: door5.urdf  model.sdf
simulation/models/depth_camera_new/: depth_camera_new.sdf
simulation/models/door/: model.sdf
simulation/models/door_1_0.8/: model.config  model.sdf
simulation/models/door_2_1.2/: model.config  model.sdf
simulation/models/iris/: iris.sdf
simulation/models/lawn_plane/: model-1_4.sdf  model.sdf
simulation/models/typhoon_h480/: typhoon_h480.sdf
simulation/worlds/: four_big_doors.world  four_big_doors_with_ground.world  four_big_doors_without_ground.world  visual_formation.world  visual_formation_sim.world  visual_formation_sim1.world  world_with_door.world  world_with_door_vertical.world  world_with_vertical_door.world
src/application/: app_collaboration.cpp  app_mission_template.cpp  app_visual_formation.cpp  aruco_landing.cpp  uav_collaboration.cpp  uav_mission_template.cpp
src/detection/: door_detection.cpp  drone_realsense_yolo.cpp  drone_sub_yolo_info.cpp  long_shot.yaml  realsense2_processing.cpp  realsense2_test.cpp  short_shot.yaml  sim.yaml  yolo_detector_with_socket.cpp
src/gcs/: gcs_display.cpp  gcs_setting.cpp  multi_uav_setting.cpp
src/lib/large_scale_traj_optimizer/: traj_min_jerk.hpp  traj_min_snap.hpp
src/lib/minimum_snap_genration/: trajectory_generator_waypoint.hpp
src/lib/trajectory_utilities/: trajectory_utils.hpp
src/pub/: form_publisher.cpp  traj_publisher.cpp
src/tensorrt_yolo/yolov5/: README.md  calibrator.cpp  yololayer.h  yolov5_trt.py
src/uav/: uav_control.cpp  uav_estimator.cpp
